# Law-Enforcement-Public-Sentiment-Analysis

./: .gitignore  Admissions_Pack.html  Law_Enforcement_Public_Sentiment_Analysis(3).ipynb  README.md  pyproject.toml  requirements.txt
artifacts/: admissions_portfolio.md
docs/: CNAME  Law_Enforcement_Public_Sentiment_Analysis(3).ipynb  README.md  index.html
docs/artifacts/: admissions_portfolio.md  classification_report.txt  confusion_matrix.csv  metrics.json  model.joblib
docs/pdfs/: README.txt
docs/src/sentiment_demo/: api.py  train.py
examples/: admissions_profile.example.json
src/sentiment_demo/: __init__.py  config.py  data.py  model.py  portfolio.py
tests/: test_data.py  test_portfolio.py  test_train_smoke.py
