[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "law-enforcement-sentiment-demo"
version = "0.1.0"
description = "Production-style sentiment analysis demo for Kenya law enforcement public sentiment"
readme = "README.md"
requires-python = ">=3.10"
authors = [
  { name = "Project Maintainer" }
]
dependencies = [
  "pandas>=2.0.0",
  "scikit-learn>=1.4.0",
  "joblib>=1.3.0",
  "fastapi>=0.112.0",
  "uvicorn>=0.30.0",
  "pydantic>=2.7.0"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0"
]

[project.scripts]
sentiment-train = "sentiment_demo.train:main"
sentiment-api = "sentiment_demo.api:run"
sentiment-portfolio = "sentiment_demo.portfolio:main"

[tool.pytest.ini_options]
pythonpath = ["src"]
addopts = "-q"
